--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -694,83 +694,81 @@
 			<p class="p_body_middle_left_title_small">热门回收</p>			
 			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">电脑</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">笔记本</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504&XL=535')">笔记本</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">显示器</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504&XL=536')">显示器</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">平板</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504&XL=537')">平板</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504')">台式机</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=504&XL=539')">台式机</li>
 			</ul>
 			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518')">数码</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=505')">手机</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518')">摄像机</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518&XL=626')">摄像机</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518')">单反</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518&XL=627')">单反</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518')">导航仪</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=518&XL=632')">导航仪</li>
 			</ul>
 			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">金银</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">黄金</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506&XL=541')">黄金</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">白银</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506&XL=542')">白银</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">铂金</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506&XL=543')">铂金</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506')">钯金</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=506&XL=544')">钯金</li>
 			</ul>
 			<p class="p_body_middle_left_title_small">生活回收</p>			
 			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">家具</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">床</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509&XL=555')">床</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">沙发</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509&XL=556')">沙发</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">衣柜</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509&XL=554')">衣柜</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509')">桌椅</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=509&XL=558')">桌椅</li>
 			</ul>
 			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">电器</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">空调</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503&XL=528')">空调</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">电视</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503&XL=530')">电视</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">冰箱</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503&XL=531')">冰箱</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503')">洗衣机</li>
-			</ul>
-			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">服饰</span>
-			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">童装</li>
-				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">鞋子</li>
-				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">布料</li>
-				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=524')">包包</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=503&XL=529')">洗衣机</li>
 			</ul>
 			<p class="p_body_middle_left_title_small">商业回收</p>
+			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=521')">办公</span>
+			<ul class="ul_body_middle_left_section" style="height: 20px;">
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=521&XL=648')">打印机</li>
+				<li class="li_body_middle_left_section_fg">/</li> 
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=521&XL=651')">传真机</li>
+				<li class="li_body_middle_left_section_fg">/</li> 
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=521&XL=652')">电话机</li>
+			</ul>
 			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">礼品</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">燕窝</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507&XL=546')">燕窝</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">海参</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507&XL=547')">海参</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">鹿茸</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507&XL=550')">鹿茸</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507')">名酒</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=507&XL=549')">名酒</li>
 			</ul>
 			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515')">设备</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515')">工厂</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515&XL=580')">工厂</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515')">机械</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515&XL=581')">机械</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515')">酒店</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','LB=515&XL=582')">酒店</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1761,'/SHFWCX/SHFWCX_ESHS','null')">更多>></li>
 			</ul>
