--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_PWKQ_MPKQ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_PWKQ_MPKQ.cshtml
@@ -71,7 +71,7 @@
         </div>
         <div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span><span class="spanFWCZ"> 转让价格</span>
+                <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK">
@@ -83,7 +83,7 @@
         </div>
         <div id="divPSFS" class="div_row" style="z-index: 990; height: 280px;">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span><span id="spanPSFS"> 配送方式</span>
+                <span class="span_required">*</span><span id="spanPSFS">配送方式</span>
             </div>
             <div id="divPSFSText" class="div_row_right">
             </div>
