--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_PBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_PBDN.cshtml
@@ -71,7 +71,7 @@
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 996">
             <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span><span class="spanFWCZ"> 新旧</span>
+                <span class="span_required">*</span><span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
                 <div id="divXJText" class="div_select_out SRK" style="z-index: 997;">
@@ -87,7 +87,7 @@
         </div>
         <div id="divJG" class="div_row" style="z-index: 995">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span><span class="spanFWCZ"> 转让价格</span>
+                <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
@@ -99,7 +99,7 @@
         </div>
         <div id="divPSFS" class="div_row" style="z-index: 995; height: 280px;">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span><span id="spanPSFS"> 配送方式</span>
+                <span class="span_required">*</span><span id="spanPSFS">配送方式</span>
             </div>
             <div id="divPSFSText" class="div_row_right">
             </div>
