--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DDC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DDC.cshtml
@@ -55,7 +55,7 @@
         </div>
         <div id="divJG" class="div_row" style="z-index: 988;">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span><span class="spanFWCZ"> 转让价格</span>
+                <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
