--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_WHYL_WTHWYQ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_WHYL_WTHWYQ.cshtml
@@ -54,7 +54,7 @@
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span><span class="spanFWCZ"> 新旧</span>
+                <span class="span_required">*</span><span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
                 <div id="divXJText" class="div_select_out SRK">
@@ -70,7 +70,7 @@
         </div>
         <div id="divJG" class="div_row" style="z-index: 994;">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span><span class="spanFWCZ"> 转让价格</span>
+                <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
@@ -82,7 +82,7 @@
         </div>
         <div id="divPSFS" class="div_row" style="z-index: 992; height: 280px;">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span><span id="spanPSFS"> 配送方式</span>
+                <span class="span_required">*</span><span id="spanPSFS">配送方式</span>
             </div>
             <div id="divPSFSText" class="div_row_right">
             </div>
