--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_WHYL_YSPSCP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_WHYL_YSPSCP.cshtml
@@ -74,7 +74,7 @@
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span><span class="spanFWCZ"> 交易地址</span>
+                <span class="span_required">*</span><span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
