--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/SY.css
@@ -6,13 +6,15 @@
 .div_body .div_body_top .div_body_top_inner .p_body_middle_left_title{font-size: 18px;border-bottom: 2px solid #bc6ba6;display: block;height: 40px;color: #bc6ba6;font-weight:bold;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top{ padding: 0;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top{ width: 114.75px;float: left;cursor: pointer;border-right:1px solid #f2f2f2;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left{display: block;text-align: center;margin: 0;width: 114.75px;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left:hover .p_body_top_left_dl{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left_dl{margin-top: 5px;display: block;text-align: center;margin: 0;width: 114.75px;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left_dl:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top_right{ width: 50px;float: left;cursor: pointer;margin-left:10px;}
-.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left_dl{margin-top: 5px;}
-.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top_right:hover .p_body_top_right_dl{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top_right .p_body_top_right_dl{margin-top: 5px;font-size:12px;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .img_body_top{ width: 42px;height: 42px;margin-left: 36.375px;text-align:center;display: block;background-size: 100%; }
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top_right .img_body_top_right{ width: 32px;height: 32px;margin-left: 9px;text-align:center;display: block;background-size: 100%; }
-.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left{display: block;text-align: center;margin: 0;width: 114.75px;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .span_body_top_left{font-size: 12px;color: #999;display: inline-block;text-align: center;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .span_body_top_left_xl:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 
@@ -32,7 +34,7 @@
 .li_body_top_small:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 .li_body_top_fg{display: inline-block;font-size: 12px;color: #999999;margin-left:1px;margin-right:1px;}
 
-.div_body .div_body_middle .div_body_middle_left_section .span_body_middle_left_title_small_cw{font-size: 14px;display: inline-block;width: 60px;height: 25px;float: left;margin-right: 10px;}
+.div_body .div_body_middle .div_body_middle_left_section .span_body_middle_left_title_small_cw{font-size: 14px;display: inline-block;width: 60px;height: 25px;float: left;margin-right: 0px;}
 .div_body .div_body_middle .div_body_middle_left_section .span_body_middle_left_title_small_cw:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 .div_body .div_body_middle .div_body_middle_left_section .span_body_middle_left_title_small_zp{font-size: 14px;display: inline-block;width: 60px;height: 25px;float: left;margin-right: 20px;}
 .div_body .div_body_middle .div_body_middle_left_section .span_body_middle_left_title_small_zp:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
@@ -43,7 +45,7 @@
 .div_body .div_body_middle .div_body_middle_left_section .span_body_middle_left_title_small_es{font-size: 14px;display: inline-block;width: 60px;height: 25px;float: left;margin-right: 20px;}
 .div_body .div_body_middle .div_body_middle_left_section .span_body_middle_left_title_small_es:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 .div_body .div_body_middle .div_body_middle_left_section .ul_body_middle_left_section_cw{display: inline-block;padding: 0;height: 30px;width: 180px;float:left;}
-.div_body .div_body_middle .div_body_middle_left_section .ul_body_middle_left_section_cw .li_body_middle_left_section_cw{display: inline-block;height: 30px;font-size: 15px;float: left;color: #333333;}
+.div_body .div_body_middle .div_body_middle_left_section .ul_body_middle_left_section_cw .li_body_middle_left_section_cw{display: inline-block;height: 30px;font-size: 14px;float: left;color: #333333;}
 .div_body .div_body_middle .div_body_middle_left_section .ul_body_middle_left_section_cw .li_body_middle_left_section_cw:hover{ cursor: pointer;color: #bc6ba6;text-decoration: underline;}
 .li_body_middle_left_section_fg{display:inline-block;float:left;margin:0 5px 0 5px;color:#d0d0d0;}
 .li_body_middle_left_section_fg_3{display:inline-block;float:left;margin:0 3px 0 3px;color:#d0d0d0;}
@@ -72,11 +74,11 @@
 .div_foot{ width: 1200px;overflow-x: hidden;background: #ffffff;height: 270px;display: block;padding: 20px 10px;margin-top: 10px;}
 .div_foot .div_foot_left{ width: 200px;height: 100%;float: left;border-bottom: 1px solid #cccccc;}
 .div_foot .div_foot_right{ width: 195px;float: left;height: 100%;border-bottom: 1px solid #cccccc;}
-.div_foot .div_foot_right .p_div_foot_right{ font-weight: 700;font-size: 16px;height: 45px;}
+.div_foot .div_foot_right .p_div_foot_right{ font-size: 16px;height: 45px;}
 .div_foot .div_foot_right .ul_div_foot_right{width: 195px;padding: 0;}
 .div_foot .div_foot_right .ul_div_foot_right .li_div_foot_right{ height: 30px;color: #999999;font-size: 13px;}
 .div_foot .div_foot_right .ul_div_foot_right .li_div_foot_right .a_div_foot_right{ height: 30px;color: #999999;font-size: 13px;cursor: default;text-decoration: none;}
-/*.div_foot .div_foot_right .ul_div_foot_right .li_div_foot_right .a_div_foot_right:hover{ color: #bc6ba6;text-decoration: underline;}*/
+.div_foot .div_foot_right .ul_div_foot_right .li_div_foot_right .a_div_foot_right:hover{ cursor:pointer;color: #bc6ba6;text-decoration: underline;}
 
 /*首页_底部*/
 .div_bottom{width: 1200px;overflow-x: hidden;background: #ffffff;height: 100px;display: block;padding-top: 10px;}
