--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/ESPWKQCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/ESPWKQCX.css
@@ -37,9 +37,9 @@
 .div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 50px;border-bottom: 1px solid #e6e6e6;padding: 10px;cursor: pointer;}
 .div_body .div_body_left .ul_body_left .li_body_left:hover{ background-color: #f9f9f9;}
 .div_body .div_body_left .ul_body_left .li_body_left:hover .p_li_body_left_center_bt{ color: #bc6ba6;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left{padding-left: 20px;width: 150px;float: left;display: inline-block;float: left;font-size: 16px;font-weight: 700;color: #bc6ba6;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center{ width: 600px;font-size: 16px;float: left;display: inline-block;}
-.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right{ width: 120px;display: inline-block;float: left;font-size: 16px;float: right;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left{padding-left: 20px;width: 150px;height:30px;display: inline-block;font-size: 16px;font-weight: 700;color: #bc6ba6;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center{ width: 600px;font-size: 16px;display: inline-block;}
+.div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right{ width: 120px;display: inline-block;font-size: 16px;float: right;}
 
 /*首页_主体_左部_分页*/
 .div_body .div_body_left .div_main_info_bottom {background-color: #fff;text-align: center;height: 38px;color: #333;font-size: 14px;font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;padding-left: 10px;padding-top: 8px;}
