--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -28,8 +28,8 @@
                     <li class="li_body_top">
                         <div class="p_body_top_left" onclick="ToEJSY('FCSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_fc.png")" />
+		 	    <div class="p_body_top_left_dl">房产</div>
                         </div>
-                        <div class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('FCSY')">房产</div>
             		<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','null')">租房</li>
 				<li class="li_body_top_fg">/</li>
@@ -39,8 +39,8 @@
                     <li class="li_body_top">
                         <div class="p_body_top_left" onclick="ToEJSY('CLSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cl.png")" />
+			    <div class="p_body_top_left_dl">车辆</div>
                         </div>
-                        <div class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('CLSY')">车辆</div>
             		<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','null')">轿车</li>
 				<li class="li_body_top_fg">/</li>
@@ -52,8 +52,8 @@
                     <li class="li_body_top">
                         <div class="p_body_top_left" onclick="ToEJSY('ZPSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zp.png")" />
+			    <div class="p_body_top_left_dl">招聘</div>
                         </div>
-                        <div class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('ZPSY')">招聘</div>
             		<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(89,'/QZZPCX/QZZPCX_QZZP','null')">全职</li>
 				<li class="li_body_top_fg">/</li>
@@ -61,10 +61,10 @@
             		</ul>
                     </li>
                     <li class="li_body_top">
-                        <p class="p_body_top_left" onclick="ToEJSY('SHFWSY')">
+                        <div class="p_body_top_left" onclick="ToEJSY('SHFWSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_shfw.png")" />
-                        </p>
-                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('SHFWSY')">生活服务</p>
+			    <div class="p_body_top_left_dl">生活服务</div>
+                        </div>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(172,'/SHFWCX/SHFWCX_BJ','null')">搬家</li>
 				<li class="li_body_top_fg">/</li>
@@ -74,10 +74,10 @@
             		</ul>
                     </li>
                     <li class="li_body_top">
-                        <p class="p_body_top_left" onclick="ToEJSY('SWFWSY')">
+                        <div class="p_body_top_left" onclick="ToEJSY('SWFWSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_swfw.png")" />
-                        </p>
-                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('SWFWSY')">商务服务</p>
+			    <div class="p_body_top_left_dl">商务服务</div>
+                        </div>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(211,'/SWFWCX/SWFWCX_GSZC','null')">工商</li>
 				<li class="li_body_top_fg">/</li>
@@ -87,10 +87,10 @@
             		</ul>
                     </li>
                     <li class="li_body_top">
-                        <p class="p_body_top_left" onclick="ToEJSY('CWSY')">
+                        <div class="p_body_top_left" onclick="ToEJSY('CWSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cw.png")" />
-                        </p>
-                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('CWSY')">宠物</p>
+			    <div class="p_body_top_left_dl">宠物</div>
+                        </div>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(31,'/CWCX/CWCX_CWG','null')">狗</li>
 				<li class="li_body_top_fg">/</li>
@@ -100,10 +100,10 @@
             		</ul>
                     </li>
                     <li class="li_body_top">
-                        <p class="p_body_top_left" onclick="ToEJSY('ESSY')">
+                        <div class="p_body_top_left" onclick="ToEJSY('ESSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_es.png")" />
-                        </p>
-                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('ESSY')">二手市场</p>
+			    <div class="p_body_top_left_dl">二手市场</div>
+                        </div>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(154,'/ESCX/ESCX_SJSM_ESSJ','null')">手机</li>
 				<li class="li_body_top_fg">/</li>
@@ -113,10 +113,10 @@
             		</ul>
                     </li>
                     <li class="li_body_top">
-                        <p class="p_body_top_left" onclick="ToEJSY('JYPXSY')">
+                        <div class="p_body_top_left" onclick="ToEJSY('JYPXSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_jypx.png")" />
-                        </p>
-                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('JYPXSY')">教育培训</p>
+			    <div class="p_body_top_left_dl">教育培训</div>
+                        </div>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(106,'/JYPXCX/JYPXCX_JJJG','null')">家教</li>
 				<li class="li_body_top_fg">/</li>
@@ -272,7 +272,7 @@
             		<li class="li_body_middle_left_section_fg_10">/</li>             		
             		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(34,'/CWCX/CWCX_CWFW','LB=187')">训练</li>
             		<li class="li_body_middle_left_section_fg_10">/</li>             		
-            		<li class="li_body_middle_left_section_cw" style="margin-right:20px;" onclick="OpenCXLB(34,'/CWCX/CWCX_CWFW','LB=188')">托运</li>            		
+            		<li class="li_body_middle_left_section_cw" style="margin-right:40px;" onclick="OpenCXLB(34,'/CWCX/CWCX_CWFW','LB=188')">托运</li>          		
             		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(34,'/CWCX/CWCX_CWFW','LB=184')">医疗</li>
             		<li class="li_body_middle_left_section_fg_10">/</li>             		
             		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(34,'/CWCX/CWCX_CWFW','LB=186')">美容</li>
@@ -281,9 +281,9 @@
             	</ul>
             	<span class="span_body_middle_left_title_small_cw" onclick="OpenCXLB(35,'/CWCX/CWCX_CWYPSP','null')">用品</span>
 		<ul class="ul_body_middle_left_section_cw" style="height: 30px;">
-            		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(35,'/CWCX/CWCX_CWYPSP','LB=159')">狗狗</li>
+            		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(35,'/CWCX/CWCX_CWYPSP','LB=159')">狗用品</li>
             		<li class="li_body_middle_left_section_fg_10">/</li>                		
-            		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(35,'/CWCX/CWCX_CWYPSP','LB=161')">猫咪</li>
+            		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(35,'/CWCX/CWCX_CWYPSP','LB=161')">猫用品</li>
             		<li class="li_body_middle_left_section_fg_10">/</li>                		
             		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(35,'/CWCX/CWCX_CWYPSP','LB=163')">其他</li>
             	</ul>
