--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CL/CLXX_ZXC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/CL/CLXX_ZXC.css
@@ -1,28 +1,6 @@
-﻿/*首页_主体*/
-.div_body{display: block;width: 1200px;height: 1000px;}
-/*首页_主体_左部*/
-.div_body .div_body_left{display: inline-block;width: 880px;border: 1px solid #cccccc;border-radius: 2px;height: auto;background-color: #ffffff;float: left;padding: 10px;}
-/*首页_主体_左部_标题*/
-.div_body .div_body_left .div_body_left_head{ height: 100px;width: 100%;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 25px;font-weight: 700;height: 45px;overflow:hidden;padding: 10px;}
-.div_body .div_body_left .div_body_left_head .p_div_body_left_head_ll{ display: block;color: #999999;height: 30px;padding: 10px;font-size: 14px;}
-/*首页_主体_左部_信息主要内容*/
-.div_body .div_body_left .div_body_left_body{ width: 100%;height: 470px;margin-top: 20px;font-size: 14px;}
-.div_body .div_body_left .div_body_left_body_left{ width: 470px;height: 475px;float: left;}
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img{width: 470px;height: 350px;display:block;text-align:center;vertical-align:middle;line-height:350px;}
-/*.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img .img_body_left_body_left_show{ width: 460px;height: 350px;}*/
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_img .img_body_left_body_left_show:hover{ cursor: pointer;}
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list{ width: 400px;overflow: hidden;display: inline-block;float: left;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{width: 2000px;height: 76px;padding: 0;margin-top: 10px;float: left;}
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list_an{float: left;height: 76px;width: 25px;font-size: 20px;margin-top: 10px;background-color: rgba(0, 0, 0, 0.3);color: #ffffff;padding: 25px 5px;}
-.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list_an:hover{ cursor: pointer;background-color: rgba(0, 0, 0, 0.6);}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp{float: left;height: 76px;margin-right: 10px;width: 90px;position: relative;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp:hover{ cursor: pointer;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .img_body_left_body_left_list_tp{ width: 90px;height: 76px;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .div_img_body_left_body_left_list_tp{ position: absolute;width: 90px;height: 76px;top: 0;left: 0;background-color: rgba(0, 0, 0, 0.5); }
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp .div_img_body_left_body_left_list_tp:hover{background-color: rgba(0, 0, 0, 0);}
+﻿/*详细信息页_主体_左部_信息主要内容*/
 .div_body .div_body_left .div_body_left_body_right{ width: 380px;height: 475px;float: left;}
-.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_first{ height: 40px;width: 100%;padding-left: 30px;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_first{ height: 40px;width: 100%;padding-left: 38px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj{ color: #bc6ba6;font-size: 14px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zjdw{ color: #bc6ba6;font-size: 14px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_yffs{ font-size: 14px;margin-left: 30px; }
@@ -35,23 +13,13 @@
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx{ height: auto;width: 100%;display: block;margin-left: 10px;margin-bottom: 30px;float: left;font-size: 14px;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_left{ font-size: 14px;float: left;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right{ margin-left: 20px;color: #666666;float: left;}
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right{width: 96px;text-align: center;display: inline-block;}
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right_fwld{width: 96px;text-align: left;display: inline-block;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .p_body_left_body_xq_xx_right{ width: 100%;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .p_body_left_body_xq_xx_right .span_body_left_body_xq_xx_left{width: 96px;text-align: right;display: inline-block;margin-left: 30px;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .p_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right{width: 120px;text-align: left;display: inline-block;margin-left: 30px;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right_fwld{width: 96px;text-align: center;display: inline-block;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right{ width: 96px;height: 70px;display: inline-block;margin-bottom: 10px;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right .img_body_left_body_xq_xx_right{ width: 40px;height: 40px;display: block;margin-left: 28px;}
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right .span_img_body_left_body_xq_xx_right{width: 96px;text-align: left;display: block;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .div_body_left_body_xq_xx_right .span_body_left_body_xq_xx_right .span_img_body_left_body_xq_xx_right{width: 96px;text-align: center;display: block;}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .fyms{width:650px}
 .div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .ul_body_left_body_xq_xx{ width: 860px;padding: 0;margin-bottom:0;}
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .ul_body_left_body_xq_xx .li_body_left_body_xq_xx{ width: 405px;height: 350px;margin-right: 10px;margin-bottom: 10px;display: inline-block;}
-
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_zk{padding-top: 10px;display: none; width: 820px;height: 48px;text-align: center;float: left;border: 1px solid #cccccc;border-radius: 2px;margin-left: 10px;background-color:rgba(204,204,204,0.2); }
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_zk:hover{background-color:rgba(204,204,204,0.6);cursor: pointer;}
-/*首页_主体_左部_小区详情*/
-.div_body .div_body_left .div_body_left_body_xqxx{ height: auto;float: left;margin-top: 20px;}
-.div_body .div_body_left .div_body_left_body_xqxx .p_body_left_body_xqxx{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx { width: 100%;height: 180px;margin-left: 10px;padding: 0;}
-.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx { width: 400px;float: left;height: 30px;}
-.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx .span_body_left_body_xqxx_left{display: inline-block;width: 100px;font-size: 14px;text-align: right;color: #999999;}
-.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx .span_body_left_body_xqxx_right{ text-align: left;font-size: 14px;}
-.div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx{ width: 820px;height: auto;margin-left: 20px;}
-.div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx .p_body_left_body_xqxx_dtxx{ height: 40px;color: #999;padding: 6px 20px;font-size: 18px;background-color: rgba(204,204,204,0.3);}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx .li_body_left_body_xq_xx{ width: 405px;height: 350px;margin-right: 10px;margin-bottom: 10px;display: inline-block;text-align:center;vertical-align:middle;line-height:350px;}
