--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
@@ -32,7 +32,7 @@
                 <div id="divFWLXTip" class="Warn"></div>
             </div>
         </div>
-        <div id="divFWPZ" class="div_row" style="z-index: 988;">
+        <div id="divFWPZ" class="div_row" style="z-index: 988;margin-bottom:0px;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanFWPZ">房屋配置</span>
@@ -89,7 +89,7 @@
                 </div>
                 <div id="divTFSJTip" class="Warn" style="z-index: 998;"></div>
             </div>*@
-        <div id="divYJ" class="div_row" style="z-index: 995;">
+        <div id="divYJ" class="div_row" style="z-index: 995;margin-bottom:40px;">
             <div class="div_row_left font_two">
                 <span class="span_required"></span>
                 <span class="spanFWCZ">租金</span>
