--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -9,16 +9,16 @@
     <div class="div_head_nav">
         <ul class="ul_head_nav">
             <li id="li_head_sy" class="li_head_nav" style="width: 80px;"><span class="span_head_nav">首页</span></li>
-            <li id="li_head_xzapp" class="li_head_nav"><span class="span_head_nav">风铃APP</span><i class="i_head_nav"></i></li>
-            <li id="li_head_xzgzh" class="li_head_nav"><span class="span_head_nav">风铃公众号</span><i class="i_head_nav"></i></li>
-            <li id="li_head_xcx" class="li_head_nav"><span class="span_head_nav">小程序</span><i class="i_head_nav"></i></li>
+            <li id="li_head_xzapp" class="li_head_nav_dropdown"><span class="span_head_nav">风铃APP</span><i class="i_head_nav"></i></li>
+            <li id="li_head_xzgzh" class="li_head_nav_dropdown"><span class="span_head_nav">风铃公众号</span><i class="i_head_nav"></i></li>
+            <li id="li_head_xcx" class="li_head_nav_dropdown"><span class="span_head_nav">小程序</span><i class="i_head_nav"></i></li>
             <li id="li_head_xztm" class="li_head_nav"><span class="span_head_nav">风铃特卖</span></li>
             <li id="li_head_xzjr" class="li_head_nav"><span class="span_head_nav">风铃装修</span></li>
             <li id="li_head_xzgy" class="li_head_nav"><span class="span_head_nav">风铃公益</span></li>
             <li id="li_head_xzfc" class="li_head_nav"><span class="span_head_nav">风铃房产</span></li>
             <li id="li_head_xzesc" class="li_head_nav"><span class="span_head_nav">风铃卖车</span></li>
-            <li id="li_head_xztg" class="li_head_nav"><span class="span_head_nav">风铃推广</span><i class="i_head_nav"></i></li>
-            <li id="li_head_viphy" class="li_head_nav"><span class="span_head_nav">VIP会员</span><i class="i_head_nav"></i></li>
+            <li id="li_head_xztg" class="li_head_nav_dropdown"><span class="span_head_nav">风铃推广</span><i class="i_head_nav"></i></li>
+            <li id="li_head_viphy" class="li_head_nav_dropdown"><span class="span_head_nav">VIP会员</span><i class="i_head_nav"></i></li>
         </ul>
     </div>
     <div id="div_Body" class="div_body">
