--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/CL/CL_JC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/CL/CL_JC.css
@@ -2,6 +2,7 @@
 .div_clys:hover {background-color: #ececec;cursor: pointer;}
 .span_clys_left {width: 18px;height: 18px;display: inline-block;border: 1px solid #cccccc;}
 .span_clys_right {display: inline-block;left: 34px;bottom: 10px;position: absolute;font-size: 14px;}
+.div_row_right .div_row_right_jcpp{width:1200px;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_item{display: none;z-index: 997;background-color: #ffffff;height: 570px;border: 1px solid #cccccc;margin-top: -3px;border-radius: 0px;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_item .span_row_right_jcpp{cursor: pointer;float: right;width: 20px;height: 20px;display: inline-block;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_first{width: 250px;margin-left: 174px;}
@@ -14,12 +15,12 @@
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_right .ul_row_right_jcpp_first_right .li_row_right_jcpp_first_right_tag{padding-left: 5px;background-color: #ececec;width: 100%;height: 25px;display: block;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_right .ul_row_right_jcpp_first_right .li_row_right_jcpp_first_right_value{cursor: pointer;padding-left: 5px;width: 100%;height: 25px;display: block;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_first .div_row_right_jcpp_first_right .ul_row_right_jcpp_first_right .li_row_right_jcpp_first_right_value:hover{ background-color: #000000;opacity: 0.7;color: #ffffff;}
-.div_row_right .div_row_right_jcpp .div_row_right_jcpp_second{width: 200px;margin-left: -2px;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_second{width: 250px;margin-left: -2px;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_second .ul_row_right_jcpp_second{ overflow-y: scroll;width: 100%;margin: 0;height: 525px;display: inline-block;padding: 0;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_second .ul_row_right_jcpp_second .li_row_right_jcpp_second{cursor: pointer;padding-left: 5px;width: 100%;height: 25px;display: block;overflow: hidden;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_second .ul_row_right_jcpp_second .li_row_right_jcpp_second:hover{ background-color: #000000;opacity: 0.7;color: #ffffff;}
-.div_row_right .div_row_right_jcpp .div_row_right_jcpp_third{width: 260px;margin-left: -2px;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_third{width: 300px;margin-left: -2px;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third{ overflow-y: scroll;width: 100%;margin: 0;height: 525px;display: inline-block;padding: 0;}
-.div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third .li_row_right_jcpp_third{cursor: pointer;padding-left: 5px;width: 100%;height: 25px;display: block;overflow: hidden;}
+.div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third .li_row_right_jcpp_third{cursor: pointer;padding-left: 5px;width: 100%;height: 23px;display: block;overflow: hidden;margin:1px 0px 1px 0px;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third .li_row_right_jcpp_third:hover{ background-color: #000000;opacity: 0.7;color: #ffffff;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_item .p_row_right_jcpp{ padding: 5px 10px;color: #bc6ba6;width: 100%;height: 40px;display: block;}
