--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -27,6 +27,7 @@
 .div_row .font_QQ{ margin-left: 98px;}
 .div_row .font_two{ margin-left: 88px;}
 .div_row .font_three{ margin-left: 75px;}
+.div_row .font_four{ margin-left: 64px;}
 .div_row .font_five{ margin-left: 46px;}
 .div_row .font_six{ margin-left: 33px;}
 .div_row .font_seven{ margin-left: 11px;}
