--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_WHYL_TSYXRJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_WHYL_TSYXRJ.cshtml
@@ -25,9 +25,9 @@
                     <img class="img_radio" id="img_gq_sjhs" /><label class="label_radio">商家</label>
                 </div>
             </div>
-            <div id="divSFTip" class="Warn" style="z-index: 996;"></div>
+            <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
         </div>
-        <div id="divTSYXRJLB" class="div_row" style="z-index: 999">
+        <div id="divTSYXRJLB" class="div_row" style="z-index: 998">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类别</span>
@@ -50,9 +50,9 @@
                     </div>
                 </div>
             </div>
-            <div id="divTSYXRJLBTip" class="Warn" style="z-index: 996;"></div>
+            <div id="divTSYXRJLBTip" class="Warn" style="z-index: 997;"></div>
         </div>
-        <div id="divXJCD" class="div_row" style="z-index: 993;">
+        <div id="divXJCD" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">新旧</span>
@@ -69,9 +69,10 @@
             </div>
             <div id="divXJCDTip" class="Warn" style="z-index: 996;"></div>
         </div>
-        <div id="divJG" class="div_row" style="z-index: 992;">
+        <div id="divJG" class="div_row" style="z-index: 995;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
@@ -79,22 +80,24 @@
                         <span class="spaninput_fontcolor">元</span>
                     </span>
             </div>
-            <div id="divJGTip" class="Warn" style="z-index: 992;"></div>
+            <div id="divJGTip" class="Warn" style="z-index: 995;"></div>
         </div>
-        <div id="divPSFS" class="div_row" style="z-index: 995; height: 280px;">
+        <div id="divPSFS" class="div_row" style="z-index: 994; height: 280px;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span id="spanPSFS">配送方式</span>
+                <span class="span_required">*</span>
+		<span id="spanPSFS">配送方式</span>
             </div>
             <div id="divPSFSText" class="div_row_right">
             </div>
             <div id="divPSFSTip" class="Warn" style="z-index: 994;"></div>
         </div>
-        <div id="divSZQY" class="div_row" style="z-index: 991;">
+        <div id="divSZQY" class="div_row" style="z-index: 993;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span class="spanFWCZ">交易地址</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
+                <div id="divQYText" class="div_select_out SRK" style="z-index: 993;">
                     <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="QYCode" />
                         <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -103,7 +106,7 @@
                     <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divDDText" class="div_select_out SRK" style="z-index: 990;">
+                <div id="divDDText" class="div_select_out SRK" style="z-index: 993;">
                     <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                         <div class="span_select_arrow"></div>
