--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_BGSB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_BGSB.cshtml
@@ -54,7 +54,8 @@
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 993;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span><span class="spanFWCZ">新旧</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
                 <div id="divXJText" class="div_select_out SRK" style="z-index: 997;">
@@ -70,7 +71,8 @@
         </div>
         <div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
@@ -90,7 +92,8 @@
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 985;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span class="spanFWCZ">交易地址</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK">
