--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_ESJD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_ESJD.cshtml
@@ -15,7 +15,7 @@
         <div id="divSF" class="div_row">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">身份</span>
+		<span class="spanFWCZ">身份</span>
             </div>
             <div class="div_row_right">
                 <div class="div_radio" id="div_gq_sjzr">
@@ -30,7 +30,7 @@
         <div id="divESJDLB" class="div_row" style="z-index: 998">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">类别</span>
+		<span class="spanFWCZ">类别</span>
             </div>
             <div class="div_row_right">
                 <div id="divLBText" class="div_select_out SRK">
@@ -53,7 +53,7 @@
             <div id="divESJDLBTip" class="Warn" style="z-index: 997;"></div>
         </div>
         <div id="divDSXXCS" class="div_row" style="z-index: 996; display: none;">
-            <div class="div_row_left" style="margin-left: 129px;">
+            <div class="div_row_left" style="margin-left: 119px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div id="divXYJXXCS" class="div_row" style="z-index: 995; display: none;">
-            <div class="div_row_left" style="margin-left: 129px;">
+            <div class="div_row_left" style="margin-left: 119px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div id="divKTXXCS" class="div_row" style="z-index: 994; display: none;">
-            <div class="div_row_left" style="margin-left: 129px;">
+            <div class="div_row_left" style="margin-left: 119px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div id="divBXXXCS" class="div_row" style="z-index: 993; display: none;">
-            <div class="div_row_left" style="margin-left: 129px;">
+            <div class="div_row_left" style="margin-left: 119px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -141,7 +141,7 @@
             </div>
         </div>
         <div id="divBGXXCS" class="div_row" style="z-index: 992; display: none;">
-            <div class="div_row_left" style="margin-left: 129px;">
+            <div class="div_row_left" style="margin-left: 119px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -158,7 +158,8 @@
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 991;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span><span class="spanFWCZ">新旧</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
                 <div id="divXJText" class="div_select_out SRK">
@@ -174,7 +175,8 @@
         </div>
         <div id="divJG" class="div_row" style="z-index: 989;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
@@ -186,7 +188,8 @@
         </div>
         <div id="divPSFS" class="div_row" style="z-index: 987; height: 280px;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span id="spanPSFS">配送方式</span>
+                <span class="span_required">*</span>
+		<span id="spanPSFS">配送方式</span>
             </div>
             <div id="divPSFSText" class="div_row_right">
             </div>
@@ -194,7 +197,8 @@
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 985;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span class="spanFWCZ">交易地址</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK">
@@ -225,7 +229,7 @@
         <div id="divFYBT" class="div_row" style="margin-top: 22px;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span id="spanFYBT">标题</span>
+		<span id="spanFYBT">标题</span>
             </div>
             <div class="div_row_right">
                 <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
@@ -235,7 +239,7 @@
         <div id="divBCMS" class="div_row" style="height: 253px; z-index: 983;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanBCMS" style="vertical-align: top">详情描述</span>
+		<span id="spanBCMS" style="vertical-align: top">详情描述</span>
             </div>
             <div class="div_row_right">
                 <script id="BCMS" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
