--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_MYFZMR_FZXMXB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_MYFZMR_FZXMXB.cshtml
@@ -53,7 +53,7 @@
             <div id="divFZXMXBLBTip" class="Warn" style="z-index: 996;"></div>
         </div>
         <div id="divFZXXCS" class="div_row" style="z-index: 998; display: none;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left" style="margin-left: 120px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div id="divXXXCS" class="div_row" style="z-index: 997; display: none;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left" style="margin-left: 120px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -86,7 +86,8 @@
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 993;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span><span class="spanFWCZ">新旧</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
                 <div id="divXJText" class="div_select_out SRK" style="z-index: 997;">
@@ -102,7 +103,8 @@
         </div>
         <div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
@@ -114,7 +116,8 @@
         </div>
         <div id="divPSFS" class="div_row" style="z-index: 987; height: 280px;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span id="spanPSFS">配送方式</span>
+                <span class="span_required">*</span>
+		<span id="spanPSFS">配送方式</span>
             </div>
             <div id="divPSFSText" class="div_row_right">
             </div>
@@ -122,7 +125,8 @@
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 985;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span class="spanFWCZ">交易地址</span>
+                <span class="span_required">*</span>
+		<span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK">
