--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_BJBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_BJBDN.cshtml
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div id="divBJBXXCS_2" class="div_row" style="z-index: 997">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left" style="margin-left: 118px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -163,7 +163,8 @@
         </div>
         <div id="divPSFS" class="div_row" style="z-index: 995; height: 280px;">
             <div class="div_row_left">
-                <span class="span_required">*</span><span id="spanPSFS">配送方式</span>
+                <span class="span_required">*</span>
+		<span id="spanPSFS">配送方式</span>
             </div>
             <div id="divPSFSText" class="div_row_right">
             </div>
