--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
@@ -55,7 +55,7 @@
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
+                <span class="span_required">*</span>
                 <span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
@@ -71,7 +71,7 @@
             <div id="divXJCDTip" class="Warn" style="z-index: 994;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 994;">
-            <div class="div_row_left">
+            <div class="div_row_left font_four">
                 <span class="span_required">*</span><span class="spanFWCZ">转让价格</span>
             </div>
             <div class="div_row_right">
@@ -83,7 +83,7 @@
             <div id="divJGTip" class="Warn" style="z-index: 993;"></div>
         </div>
         <div id="divPSFS" class="div_row" style="z-index: 992; height: 280px;">
-            <div class="div_row_left">
+            <div class="div_row_left font_four">
                 <span class="span_required">*</span><span id="spanPSFS">配送方式</span>
             </div>
             <div id="divPSFSText" class="div_row_right">
