--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD/LYJD_GNY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD/LYJD_GNY.cshtml
@@ -113,7 +113,7 @@
         </div>
         <div id="divXCAP" class="div_row" style="height: 253px; z-index: 991;">
             <div class="div_row_left" style="vertical-align: top;">
-                <span class="span_required">&nbsp;</span>
+                <span class="span_required">*</span>
                 <span id="spanXCAP">行程安排</span>
             </div>
             <div class="div_row_right">
@@ -186,7 +186,7 @@
         </div>
         <div id="divFYBH" class="div_row" style="z-index: 992;height: 253px;">
             <div class="div_row_left" style="vertical-align: top;">
-                <span class="span_required">&nbsp;</span>
+                <span class="span_required">*</span>
                 <span id="spanFYBH">费用包含</span>
             </div>
             <div class="div_row_right">
@@ -197,7 +197,7 @@
         </div>
         <div id="divZFXM" class="div_row" style="z-index: 992;height: 253px;">
             <div class="div_row_left" style="vertical-align: top;">
-                <span class="span_required">&nbsp;</span>
+                <span class="span_required">*</span>
                 <span id="spanZFXM">自费项目</span>
             </div>
             <div class="div_row_right">
