--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
@@ -32,6 +32,28 @@
                 <div id="divFWLXTip" class="Warn"></div>
             </div>
         </div>
+        <div id="divZJ" class="div_row" style="z-index: 995;margin-bottom:40px;">
+            <div class="div_row_left font_two">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">租金</span>
+            </div>
+            <div class="div_row_right">
+                <span id="spanZJ" class="span_spaninput SRK" style="display: inline-block;">
+                    <input class="input_spaninput spaninput_fontcolor" id="ZJ" maxlength="9" column="ZJ" type="text" style="width: 100px;" />
+                    <span class="spaninput_fontcolor">元/天</span>
+                </span>
+                <div id="divZJTip" class="Warn"></div>
+            </div>
+        </div>
+        <div id="divFKFS" class="div_row" style="z-index: 988;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span id="spanFKFS">付款方式</span>
+            </div>
+            <div id="divFKFSText" class="div_row_right" style="position: relative">
+            </div>
+	    <div id="divFKFSTip" class="Warn"></div>
+        </div>
         <div id="divFWPZ" class="div_row" style="z-index: 988;margin-bottom:0px;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
@@ -89,27 +111,6 @@
                 </div>
                 <div id="divTFSJTip" class="Warn" style="z-index: 998;"></div>
             </div>*@
-        <div id="divYJ" class="div_row" style="z-index: 995;margin-bottom:40px;">
-            <div class="div_row_left font_two">
-                <span class="span_required"></span>
-                <span class="spanFWCZ">租金</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanYJ" class="span_spaninput SRK" style="display: inline-block;">
-                    <input class="input_spaninput spaninput_fontcolor" id="YJ" maxlength="9" column="YJ" type="text" style="width: 100px;" />
-                    <span class="spaninput_fontcolor">元/天</span>
-                </span>
-                <div id="divYJTip" class="Warn"></div>
-            </div>
-        </div>
-        <div id="divFKFS" class="div_row" style="z-index: 988;">
-            <div class="div_row_left">
-                <span class="span_required">&nbsp;</span>
-                <span id="spanFKFS">付款方式</span>
-            </div>
-            <div id="divFKFSText" class="div_row_right" style="position: relative">
-            </div>
-        </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
             <em class="em_split"></em>
