--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -166,7 +166,7 @@
 		</ul>
 		<ul class="ul_body_middle_left_section" style="height: 30px;">		
 			<li class="li_body_middle_left_section purple" style="margin-right:20px;" onclick="OpenCXLB(16,'/FCCX/FCCX_ESF','null')">二手房</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(16,'/FCCX/FCCX_ESF','null')">新房</li>	
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(16,'/FCCX/FCCX_ESF','FL=5年以内')">新房</li>	
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(17,'/FCCX/FCCX_SP','null')">商铺</li>
 			<li class="li_body_middle_left_section" onclick="OpenCXLB(18,'/FCCX/FCCX_XZL','null')">写字楼</li>
 		</ul>
@@ -606,7 +606,7 @@
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(124,'/LYJDCX/LYJDCX_GNY','null')">自驾游</li>
 			</ul>
-			<span class="span_body_middle_left_title_small_fw"  onclick="OpenCXLB(127,'/LYJDCX/LYJDCX_CJY','null')">国外</span>
+			<span class="span_body_middle_left_title_small_fw"  onclick="OpenCXLB(126,'/LYJDCX/LYJDCX_CJY','null')">国外</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(1291,'/LYJDCX/LYJDCX_QZFW','null')">签证</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
